changed somethings to run on macbook